--- a/CalculaterName_App/index.html
+++ b/CalculaterName_App/index.html
@@ -14,7 +14,8 @@
 
         <div>
             <!-- ng-model >> to show name varible value 
-            ng-keyu >> to keep track and use function that written at  -->
+            ng-keyu >> to keep track and use function that written at  
+        bound name of scope -->
             your name: <input type="text" ng-model="name"
             ng-keyup="displayNumric();">
         </div>
